--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@types/gsap": "^3.0.0",
+    "bootstrap": "^5.3.0",
     "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
